# fast-led-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  linear.cc
include/: fast-led-simulator.h  linear-simulator.h
src/: fast-led-simulator.cc
